my-apps/utility/vert/vertd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vertd
  namespace: vert
  labels:
    app.kubernetes.io/name: vertd
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: vertd
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vertd
    spec:
      containers:
        - name: vertd
          image: ghcr.io/vert-sh/vertd:latest@sha256:171ee8654cf0b19f2c289bb9a120c37f2057862c05acf1bb6b62be874540c39a
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 24153
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 1Gi
          volumeMounts:
            - name: dev-dri
              mountPath: /dev/dri
              readOnly: true
      volumes:
        - name: dev-dri
          hostPath:
            path: /dev/dri
            type: DirectoryOrCreate
