my-apps/utility/vert/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vert
  namespace: vert
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: vert
